fixed issue with extension not showing up

--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 #ui {
-  min-width: 360px;
+  width: 500px; 
 }
 
 .tab-content {
